fdo#48086 - add help for impress (insert -> animated image)

Help file was already available, just added the button to the UI dialog for Presentation's
insert->animated image

	modified:   sd/source/ui/dlg/animobjs.cxx
	modified:   sd/source/ui/dlg/animobjs.src
	modified:   sd/source/ui/inc/animobjs.hrc
	modified:   sd/source/ui/inc/animobjs.hxx

Change-Id: I0dbc51f0630d8df001cb17c7465d0e599a5f7815
Reviewed-on: https://gerrit.libreoffice.org/1849
Tested-by: Caolán McNamara <caolanm@redhat.com>
Reviewed-by: Caolán McNamara <caolanm@redhat.com>